ChangeLog for the Astro project.

20201226:
	* fix size for unsigned long and double pixel maximum
	* added ssh key for development gurin
	* make repo directory installation configurable so that we don't 
	  have to turn of autofs during installation on production raspis

20201201:
	* complete the Qhy2 driver

20201130:
	* fix some auto const variables
	* fix some typeid warnings
	* fix demangle_cstr function
	* add qhy2 driver
	* rename our own qhylib to qhylib0 in order to prevent name
	  conflicts with QHYs library
	* there still is a naming conflict with the config.h in the
	  QHYCCD library

20201116:
	* add some copy constructor and assignment operators in cases where
	  implicit definition is deprecated

20200828:
	* fix a bug in the guide port implementation of the ASI driver
	* fix mixed up fast/high in the QSI driver
	* add more debugging to the QSI driver to help analyze the float/double
	  problem
	* fix two warnings

20200824:
	* fix a problem with the QSI library that results from the use of
	  double for exposure time in the QSI library and float in this project
	* fix a problem with the computation of the noise distribution in
	  the simulator driver

20200822:
	* add quality to exposure in CCD, simulator, qsi, tasks (task table
	  needs to be upgraded)
	* fix some bugs in noise model of simulator
	* fix a bug in FITS.cpp

20200821:
	* introduce StarTile for lightweight stars
	* fix SimMount movement logic
	* fix locking error in SimFilterwheel

20200820:
	* add great circle path for simulated mount
	* portability fix in snowfocuser
	* add snowfocuser client program
	* complete callback implementation in FocuserI.cpp
	* add the astrofocuser program
	* rework the othello focuser driver, add monitoring thread
	* allow for older libusb in USBContextHolder.cpp

20200819:
	* protect Callback from races
	* make SimCooler start only when it is actually requested
	* fix missing includes in astrotime and astrofocus

20200818: